Add: stage 1/4 finished

--- a/Hypergram/First steps/task-info.yaml
+++ b/Hypergram/First steps/task-info.yaml
@@ -96,5 +96,8 @@ files:
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/projects/199/stages/989/implement#comment
-status: Failed
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 15 Nov 2021 16:28:39 UTC
 record: -1
